--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   color: #573A37;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: url(assets/bg.jpg);
   background-size: cover;
@@ -15,11 +20,23 @@ body {
   padding: 24px;
   background-color: #F0E8C2;
   border-radius: 24px;
-  margin: 48px auto;
+  margin: 48px auto 28px;
 }
 
 img {
   border-radius: 16px;
+}
+
+main {
+  padding: 24px;
+}
+
+section + section {
+  margin-top: 24px;
+}
+
+#about p + p {
+  margin-top: 12px;
 }
 
 h1 {
@@ -33,4 +50,20 @@ h2 {
 
 h1, h2 {
   color: #291B1A;
+  margin-bottom: 4px;
+  line-height: 150%;
+}
+
+ul {
+  padding-left: 24px;
+}
+
+footer {
+  color: #F0E8C2;
+  text-align: center;
+  padding-bottom: 48px;
+}
+
+footer img {
+  vertical-align: middle;
 }
